; ModuleID = '/home/carl/AnghaBench/linux/drivers/soundwire/extr_stream.c_sdw_is_valid_port_range.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/soundwire/extr_stream.c_sdw_is_valid_port_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.sdw_port_runtime = type { i32 }

@.str = private unnamed_addr constant [36 x i8] c"SoundWire: Invalid port number :%d\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.sdw_port_runtime*)* @sdw_is_valid_port_range to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sdw_is_valid_port_range(%struct.device* %0, %struct.sdw_port_runtime* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.sdw_port_runtime*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.sdw_port_runtime* %1, %struct.sdw_port_runtime** %5, align 8
  %6 = load %struct.sdw_port_runtime*, %struct.sdw_port_runtime** %5, align 8
  %7 = getelementptr inbounds %struct.sdw_port_runtime, %struct.sdw_port_runtime* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @SDW_VALID_PORT_RANGE(i32 %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %19, label %11

11:                                               ; preds = %2
  %12 = load %struct.device*, %struct.device** %4, align 8
  %13 = load %struct.sdw_port_runtime*, %struct.sdw_port_runtime** %5, align 8
  %14 = getelementptr inbounds %struct.sdw_port_runtime, %struct.sdw_port_runtime* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @dev_err(%struct.device* %12, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i32 %15)
  %17 = load i32, i32* @EINVAL, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %3, align 4
  br label %20

19:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %20

20:                                               ; preds = %19, %11
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @SDW_VALID_PORT_RANGE(i32) #1

declare dso_local i32 @dev_err(%struct.device*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
